manifests/namespace.yaml
# namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: private-terraform-registry
